--- a/about.html
+++ b/about.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
     <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="/css/about.css" />
     <title>About</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <div id="aboutSection1">
+        <div id="aboutSection1a">
+          <h2>Trust my <b>10 years</b> of experience dressing stars!</h2>
+        </div>
+        <div id="aboutSection1b">
+          <p>
+            I am Norma, a Fashion and Jewelry designer based in Copenhagen.
+            <br /><br />
+            I started sewing my bikinis back 2013 when I won my class in Bikini
+            Fitness. Since then I became passionate about improving my physique
+            and presentation. And so I did until reaching top 6 at European
+            Championships.
+            <br /><br />
+            My mission is to create the winner look that works for you. I know
+            all the tricks and rules on how to make the best out of your
+            physique. I can help choosing the colors, the cut and the design to
+            maximize your chances of success, and I am aware of all
+            international trends and classes.
+          </p>
+          <button type="button" class="aboutBtn">Get in touch</button>
+        </div>
+      </div>
+      <div id="aboutSection2">
+        <div id="aboutSection2a">Picture</div>
+        <div id="aboutSection2b"><h1>ABOUT ME</h1></div>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
