changes to contact page, about page and index

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <main>
       <div id="aboutSection1">
         <div id="aboutSection1a">
-          <h2>Trust my <b>10 years</b> of experience dressing stars!</h2>
+          <h2>TRUST MY 10 YEARS <br />EXPERIENCE DRESSING STARS</h2>
         </div>
         <div id="aboutSection1b">
           <p>
