--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
     <header></header>
     <main>
       <div id="textContact">
-        <h2>Wanna <b>work</b> with us?</h2>
-        <h2>Have a <b>question?</b></h2>
+        <h2>WANNA WORK WITH US?</h2>
+        <h2>HAVE A QUESTION?</h2>
         <br />
         <p>
           Fill in your details and let’s chat about how we can help you
@@ -56,7 +56,14 @@
           />
 
           <label for="message"> <p>Write your message here</p></label>
-          <input type="text" name="message" placeholder="Hi" class="w-100" />
+          <textarea
+            type="text"
+            name="message"
+            rows="10"
+            placeholder="Hi"
+            class="w-100"
+          >
+          </textarea>
         </form>
         <button id="form1Btn" value="submit">Get in touch!</button>
         <h1>GET IN TOUCH</h1>
