--- a/productlist.html
+++ b/productlist.html
@@ -7,5 +7,18 @@
     <link rel="stylesheet" href="/css/base.css" />
     <title>Productlist</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <h1>Ready to ship</h1>
+
+      <template id="smallProductPreview">
+        <article>
+          <img src="" alt="" />
+          <h3></h3>
+        </article>
+      </template>
+    </main>
+    <footer></footer>
+  </body>
 </html>
