--- a/about.html
+++ b/about.html
@@ -10,7 +10,39 @@
     <title>About</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="index.html"
+        ><img
+          id="logo"
+          class="pulse-grow-on-hover"
+          src="/illustrations/logo.png"
+          alt="logo"
+      /></a>
+      <nav>
+        <ul id="navList">
+          <li><a href="productlist.html">Shop</a></li>
+          <li><a href="assessment.html">Assessment</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                fill="currentColor"
+                class="bi bi-cart3"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+                />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <div id="aboutSection1">
         <div id="aboutSection1a">
@@ -31,12 +63,47 @@
             maximize your chances of success, and I am aware of all
             international trends and classes.
           </p>
-          <button type="button" class="aboutBtn">Get in touch</button>
+          <button type="button" class="pulse-grow-on-hover" id="aboutBtn">
+            Get in touch
+          </button>
         </div>
       </div>
       <div id="aboutSection2">
-        <div id="aboutSection2a">Picture</div>
-        <div id="aboutSection2b"><h1>ABOUT ME</h1></div>
+        <div id="aboutSection2a">
+          <img
+            src="/illustrations/aboutPhoto.png"
+            alt="About Photo"
+            id="aboutPhotoId"
+          />
+        </div>
+        <div id="aboutSection2b"><h1>ABOUT</h1></div>
+      </div>
+      <div id="achievementsBox">
+        <h3>OUR ACHIEVEMENTS</h3>
+        <div>
+          <img
+            src="/illustrations/aboutPhoto.png"
+            alt="About Photo"
+            class="achievementCircle"
+          />
+          <p>Years of experience</p>
+        </div>
+        <div>
+          <img
+            src="/illustrations/aboutPhoto.png"
+            alt="About Photo"
+            class="achievementCircle"
+          />
+          <p>La La La</p>
+        </div>
+        <div>
+          <img
+            src="/illustrations/aboutPhoto.png"
+            alt="About Photo"
+            class="achievementCircle"
+          />
+          <p>bla bla</p>
+        </div>
       </div>
     </main>
     <footer></footer>
