an idea wirh a href

--- a/productlist.html
+++ b/productlist.html
@@ -12,10 +12,13 @@
     <main>
       <h1>Ready to ship</h1>
 
-      <template id="smallProductPreview">
+      <template id="smallProductView">
         <article>
-          <img src="" alt="" />
-          <h3></h3>
+          <a href="#">
+            <img src="" alt="" />
+            <img class="secondary-img" src="" alt="" />
+            <h3></h3>
+          </a>
         </article>
       </template>
     </main>
