--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
-    <link rel="stylesheet" href="/css/base.css" />
-    <link rel="stylesheet" href="/css/contact.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/contact.css" />
     <title>Contact</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
         ><img
           id="logo"
           class="pulse-grow-on-hover"
-          src="/illustrations/logo.png"
+          src="illustrations/logo.png"
           alt="logo"
       /></a>
       <nav>
