--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         </p>
       </div>
       <div id="form1">
-        <form action="/action_page.php" method="get">
+        <form action="action_page.php" method="get">
           <div class="d-flex">
             <label
               ><p>First name</p>
