--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
-    <link rel="stylesheet" href="/css/base.css" />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Home</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
         ><img
           id="logo"
           class="pulse-grow-on-hover"
-          src="/illustrations/logo.png"
+          src="illustrations/logo.png"
           alt="logo"
       /></a>
       <nav>
@@ -76,7 +76,7 @@
           <h2 class="fpWhoWeAre">Who we are</h2>
           <div id="fpSubContainer2a">
             <img
-              src="/illustrations/fpProfile.png"
+              src="illustrations/fpProfile.png"
               alt="Profile Picture"
               id="normaPhoto"
             />
@@ -99,7 +99,7 @@
           </div>
         </div>
       </div>
-      <script src="/js/script.js"></script>
+      <script src="js/script.js"></script>
     </main>
   </body>
 </html>
