--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
       /></a>
       <nav>
         <ul id="navList">
+          <li><a class="homeBtn" href="index.html">Home</a></li>
           <li><a href="productlist.html">Shop</a></li>
           <li><a href="assessment.html">Assessment</a></li>
           <li><a href="about.html">About</a></li>
