--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
               ><img
                 id="nav-branding"
                 class="pulse-grow-on-hover"
-                src="/illustrations/logo.png"
+                src="illustrations/logo.png"
                 alt="logo"
             /></a>
 
