--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <div class="subcontainer">
           <nav class="navbar">
             <a href="index.html"
-              ><img id="nav-branding" src="/illustrations/logo.png" alt="logo"
+              ><img
+                id="nav-branding"
+                src="illustrations/logo.png"
+                alt="logo"
+                class="pulse-grow-on-hover"
             /></a>
 
             <ul class="nav-menu">
